Refactor ticket management system to use repositories and improve entity structure
- Introduced TicketRepository and UserRepository to handle database operations for Ticket and User entities.
- Refactored Ticket, User, Workflow, and related classes to remove PanacheEntity inheritance and use JPA annotations directly.
- Updated ProjectTicketEndpoint to utilize TicketRepository for fetching tickets by project ID.
- Enhanced TicketEndpoint to use repository methods for CRUD operations and improved error handling.
- Modified TicketExpandedResponse and TicketResponse to use getter methods for accessing Ticket properties.
- Implemented WorkflowRepository to manage workflow-related database operations.
- Updated WorkflowResource to utilize WorkflowRepository for listing workflows and managing transitions.
- Improved overall code structure and readability by using Java conventions for getters and setters.